# CH376S

./: CMakeLists.txt  LICENSE  README.md  prj.conf  west.yml
.github/workflows/: unit-test.yml
boards/: rpi_pico.overlay  rpi_pico2.conf  rpi_pico2.overlay
drivers/ch375/include/: ch375.h  ch375_host.h  ch375_uart.h  ch37x_common.h
drivers/ch375/src/: ch375.c  ch375_host.c  ch375_uart.c  ch375_uart_rp2.c  ch375_uart_stm32.c
drivers/ch376/include/: ch376s.h  ch376s_uart.h
drivers/ch376/src/: ch376s.c  ch376s_uart.c  ch376s_uart_rp2.c
drivers/ch37x/include/: ch375.h  ch375_host.h  ch375_uart.h  ch376s.h  ch376s_uart.h  ch37x_common.h  usb.h
drivers/ch37x/src/: ch375.c  ch375_host.c  ch375_uart.c  ch375_uart_rp2.c  ch376s.c  ch376s_uart.c  ch376s_uart_rp2.c
drivers/hid/include/: hid_keyboard.h  hid_mouse.h  hid_output.h  hid_parser.h
drivers/hid/src/: hid_keyboard.c  hid_mouse.c  hid_output.c  hid_parser.c
include/: input_patterns.h  usb_hid_proxy.h
src/: input_patterns.c  main.c  usb_hid_proxy.c
tests/unit/ch375/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/ch375/mocks/: mock_ch375_hw.c  mock_ch375_hw.h  usb_stubs.h
tests/unit/ch375/src/: test_ch375_core.c  test_descriptors.c  test_hid_keyboard.c  test_hid_mouse.c  test_hid_parser.c  test_transfers.c
tests/unit/ch375/stubs/zephyr/drivers/usb/: uhc.h
